fix fadeout animation, make points visible on screen

--- a/rocket/style.css
+++ b/rocket/style.css
@@ -1,9 +1,21 @@
+:root {
+  --blue: #87ceeb;
+}
+
 canvas {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 2;
 }
+
+
+
+/*
+
+Progress bar
+
+*/
+
 
 #progress-bar-container{
   position: absolute;
@@ -12,7 +24,7 @@ canvas {
   transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
-  background-color: #87ceeb;
+  background-color: var(--blue);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -39,5 +51,64 @@ label {
   }
   100% {
       opacity: 0;
-   }
+  }
+}
+
+
+/*
+
+animated points
+
+*/
+
+
+
+.point {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 2;
+}
+
+.point:hover .text{
+  opacity: 1;
+}
+
+.point.visible .label{
+  transform: scale(1,1);
+}
+
+
+.point .label{
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #00000077;
+  color: #ffffff;
+  text-align: center;
+  line-height: 40px;
+  font-size: 14px;
+  cursor: pointer;
+  display:inline-block;
+  transform: scale(0, 0);
+  transition: transform 0.3s;
+}
+
+
+.point .text{
+  position: absolute;
+  left: 50px;
+  padding: 20px;
+  width: 200px;
+  border-radius: 4px;
+  background: #00000077;
+  color: #ffffff;
+  text-align: center;
+  line-height: 1.3em;
+  font-size: 14px;
+  display:inline-block;
+  opacity: 0;
+  transition: opacity 0.3s;
+  pointer-events: none;
 }
